--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="HelloWorld" basedir="." default="main">
+<project name="LetterSize" basedir="." default="main">
 
     <property name="src.dir"     value="src"/>
 
